--- a/TheOpenJournal/TheOpenJournal.csproj
+++ b/TheOpenJournal/TheOpenJournal.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.36.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\blogImages\" />
+  </ItemGroup>
+
 </Project>
